# atento-core

./: .editorconfig  .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE.MIT  Makefile  README.md  SECURITY.md  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependency-review.yml  publish.yml  version-check.yml
benches/: README.md  chain_parsing.rs  workflow_parsing.rs
examples/: custom_interpreter_chain.yaml  readme_examples.rs  simple_chain.rs  simple_workflow.rs
src/: chain.rs  data_type.rs  errors.rs  executor.rs  input.rs  interpreter.rs  lib.rs  output.rs  parameter.rs  result_ref.rs  runner.rs  step.rs  workflow.rs
src/tests/: chain_tests.rs  data_type_tests.rs  errors_tests.rs  executor_tests.rs  input_tests.rs  interpreter_tests.rs  lib_tests.rs  mock_executor.rs  mod.rs  output_tests.rs  parameter_tests.rs  result_ref_tests.rs  runner_tests.rs  step_tests.rs  workflow_tests.rs
tests/: integration.rs
tests/chains/: README.md
tests/chains/cross-platform/: data_pipeline.yaml  data_types_powershell_core.yaml  data_types_python.yaml  python_advanced.yaml  user_greeting.yaml
tests/chains/unix/: data_types_bash.yaml  input_output_chain.yaml
tests/chains/windows/: data_types_batch.yaml  data_types_powershell.yaml
tests/workflows/: README.md
tests/workflows/cross-platform/: data_pipeline.yaml  data_types_powershell_core.yaml  data_types_python.yaml  python_advanced.yaml  user_greeting.yaml
tests/workflows/unix/: data_types_bash.yaml  input_output_chain.yaml
tests/workflows/windows/: data_types_batch.yaml  data_types_powershell.yaml
