[package]
name = "atento-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/weareprogmatic/atento-core"
readme = "README.md"
description = "Core engine for the Atento Chained Script CLI"
homepage = "https://weareprogmatic.com/atento"
documentation = "https://docs.rs/atento-core"
keywords = ["rust", "cli", "script", "chain", "devops", "msp", "rmm", "automation", "workflow"]
categories = ["command-line-utilities"]
authors = ["Atento Core Team <atento@weareprogmatic.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1"
indexmap = { version = "2.12", features = ["serde"] }

[dev-dependencies]
tempfile = "3.6"

[[example]]
name = "simple_chain"
path = "examples/simple_chain.rs"

[[bench]]
name = "chain_parsing"
path = "benches/chain_parsing.rs"
harness = false
